# reearth-buildings

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  catalog-info.yaml  cloudflare-architecture.md  package.json  pnpm-lock.yaml  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.cargo/: config.toml.example
.github/workflows/: ci.yml
apps/worker/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
apps/worker/public/: index.html
apps/worker/scripts/: fetch-and-render.mjs  fetch-egm08.sh  verify-meshopt.mjs  verify-normals.mjs
apps/worker/src/: cog.ts  egm.ts  env.ts  index.ts  lod.ts  pmtiles.ts  terrain.ts  tile.ts  version.ts  wasm.d.ts  wasm.ts
apps/worker/src/routes/: glb.ts  tileset.ts  viewer.ts
crates/buildings-core/: Cargo.toml
crates/buildings-core/src/: coord.rs  glb.rs  height_config.rs  lib.rs  mesh.rs
crates/buildings-wasm/: Cargo.toml
crates/buildings-wasm/src/: lib.rs
crates/height-optimizer/: Cargo.toml  README.md
crates/height-optimizer/presets/: README.md  baseline.toml  candidate-conservative.toml  candidate-tall-cbd.toml  candidate-tuned-v2.toml  candidate-tuned-v3.toml
crates/height-optimizer/src/: bbox.rs  cities.rs  fetch_overture.rs  fetch_plateau.rs  main.rs  matcher.rs  metrics.rs  report.rs
crates/mvt-decoder/: Cargo.toml
crates/mvt-decoder/src/: lib.rs
crates/pmtiles-reader/: Cargo.toml
crates/pmtiles-reader/src/: lib.rs
crates/terrain-decoder/: Cargo.toml
crates/terrain-decoder/src/: lib.rs
crates/worker/: Cargo.toml  wrangler.toml
crates/worker/src/: lib.rs  routes.rs
public/: index.html
scripts/: build-wasm.mjs
src/: hash.ts  index.ts  lod.ts  pmtiles.ts  retry.ts  terrain.ts  tile.ts  version.ts  wasm.ts
src/routes/: debug.ts  glb.ts  tileset.ts
