[workspace]
resolver = "2"
members = [
    "crates/pmtiles-reader",
    "crates/mvt-decoder",
    "crates/buildings-core",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eukarya-inc/reearth-buildings"

[workspace.dependencies]
worker = "0.8"
worker-macros = "0.8"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
