[workspace]
resolver = "2"
members = [
    "crates/mvt-decoder",
    "crates/buildings-core",
    "crates/buildings-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eukarya-inc/reearth-buildings"

[workspace.dependencies]
bytes = "1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
earcutr = "0.4"
byteorder = "1"
meshopt = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
