[package]
name = "buildings-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Building polygon extrusion → glTF/glb (3D Tiles 1.1) generator"

[dependencies]
mvt-decoder = { path = "../mvt-decoder" }
bytes = { workspace = true }
thiserror = { workspace = true }
earcutr = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
