[package]
name = "mvt-decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Mapbox Vector Tile decoder for the buildings layer"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
