[package]
name = "pmtiles-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PMTiles v3 reader with pluggable byte-range backend (WASM/native)"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
